# parked-web-monorepo

./: FormDiagnosa.blade.php  README.md  composer.json  navbar.blade.php  readme.txt  script.js  style.css
api-ml/: .gitignore  requirements.txt
api-ml/app/services/: neuroimaging.py  voice_measurements.py
api-ml/app/utils/: feature_extraction.py
app/Exceptions/: Handler.php
app/Http/: Kernel.php
app/Http/Controllers/: AuthController.php  DashboardController.php  FormAPIController.php  FormController.php  GoogleAuthController.php  HistoryFormController.php  HomeController.php  LoginController.php  PDFController.php  PatientController.php  UserController.php  UserManagementController.php
app/Http/Middleware/: RoleMiddleware.php  TimezoneMiddleware.php
app/Models/: FormSubmission.php  User.php
config/: app.php
database/migrations/: 2024_10_13_122814_form.php  2024_10_18_220359_create_users_table.php  2024_10_19_031430_create_form_table.php
public/assets/css/: home.css  style.css
public/assets/js/: login.js  script.js  scriptadmin.js
resources/views/: errorMessage.blade.php  tabel.blade.php
routes/: web.php
services/diagnosis-service/: .dockerignore  .gitignore  Dockerfile  deploy.sh  main.py  pyproject.toml
services/diagnosis-service/app/services/: handwriting.py  neuroimaging.py  voice_measurements.py
services/diagnosis-service/app/utils/: model_path.py
web/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  deploy.sh  readme.txt
web/config/: app.php  services.php
web/public/: index.php
web/routes/: web.php
(+73 files in other folders)
