[project]
name = "diagnosis_service"
version = "0.1.0"
description = ""
authors = []
requires-python = "==3.11.*"
maintainers = []

dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "boto3==1.36.15",
    "keras-image-helper==0.0.1",
    "pandas==2.2.3",
    "pipdeptree==2.25.0",
    "praat-parselmouth==0.4.5",
    "pydub==0.25.1",
    "pyOpenSSL==25.0.0",
    "python-decouple==3.8",
    "requests==2.32.3",
    "scikit-learn==1.5.1",
    "tflite-runtime==2.14.0",
    "numpy==1.26.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
